# SYS-350-2023FA

automation/: README.md  config.ini  pyproject.toml
automation/sys350_automation/: __init__.py  main.py
sysvm-pyvmomi-automation/: README.md  pyproject.toml
sysvm-pyvmomi-automation/sysvm/: __init__.py  main.py
