[project]
name = "sysvm"
version = "0.2.0"
description = "vSphere automation with pyvmomi for SYS-350, Fall 2023"
authors = [
    {name = "Reed Simon", email = "reed.simon@mymail.champlain.edu"},
]
dependencies = [
    "pyvmomi>=8.0.2.0",
    "pyvim>=3.0.3",
    "rich>=13.6.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
sysvm = "sysvm.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

